# BremSim

./: .gitignore  BremSim.cc  Brem_Sim.cc  CMakeLists.txt  full_run.mac  output_E_0.1MeV_T_1mm.root  output_E_0.1MeV_T_250um.root  output_E_0.1MeV_T_2mm.root  output_E_0.1MeV_T_50um.root  output_E_0.1MeV_T_5um.root  output_E_0.2MeV_T_1mm.root  output_E_0.2MeV_T_250um.root  output_E_0.2MeV_T_2mm.root  output_E_0.2MeV_T_50um.root  output_E_0.2MeV_T_5um.root  output_E_0.3MeV_T_1mm.root  output_E_0.3MeV_T_250um.root  output_E_0.3MeV_T_2mm.root  output_E_0.3MeV_T_50um.root  output_E_0.3MeV_T_5um.root  output_E_0.4MeV_T_1mm.root  output_E_0.4MeV_T_250um.root  output_E_0.4MeV_T_2mm.root  output_E_0.4MeV_T_50um.root  output_E_0.4MeV_T_5um.root  output_E_0.5MeV_T_1mm.root  output_E_0.5MeV_T_250um.root  output_E_0.5MeV_T_2mm.root  output_E_0.5MeV_T_50um.root  output_E_0.5MeV_T_5um.root  output_E_0.6MeV_T_1mm.root  output_E_0.6MeV_T_250um.root  output_E_0.6MeV_T_2mm.root  output_E_0.6MeV_T_50um.root  output_E_0.6MeV_T_5um.root  output_E_0.7MeV_T_1mm.root  output_E_0.7MeV_T_250um.root  output_E_0.7MeV_T_2mm.root  output_E_0.7MeV_T_50um.root  output_E_0.7MeV_T_5um.root  (+218 more)
include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SensitiveDetector.hh  SteppingAction.hh
macros/: accurate_run.mac  fix_run.mac  full_run.mac  generate_full_run_macro.py  init_vis.mac  medium_run.mac  non_trained_run.mac  non_trained_run_resume.mac  run.mac  test_run.mac  vis.mac
post_process/: analyze_campaign.py  brem_spec_net.pth  (+13 more)
(+8 files in other folders)
